src/objects/Upload_Email_Notification__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Email_For_All_File_Type__c</fullName>
        <label>Email For All File Type</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_For_Invoice__c</fullName>
        <label>Email For Invoice</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_For_Video__c</fullName>
        <label>Email For Video</label>
        <type>Email</type>
    </fields>
    <label>Upload Email Notification</label>
</CustomObject>